--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-HTTP_PORT=3002
-GRPC_PORT=50052
-GRPC_MODEL_MGMT_HOST=DOMAIN:PORT
+HTTP_PORT=3003
+GRPC_PORT=50053
+GRPC_MODEL_MGMT_HOST=127.0.0.1:50052
 RABBITMQ_HOST=DOMAIN
 RABBITMQ_DOCKER_ENGINE_QUEUE=docker_queue
 MONGO_DB_URL=MONGO_DB_URL
