--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 HTTP_PORT=3003
 GRPC_PORT=50053
 GRPC_MODEL_MGMT_HOST=127.0.0.1:50052
+HTTP_MODEL_MGMT_HOST: 127.0.0.1:3002
+GRPC_STABLE: true
 RABBITMQ_HOST=DOMAIN
 RABBITMQ_DOCKER_ENGINE_QUEUE=docker_queue
 MONGO_DB_URL=MONGO_DB_URL
 JWT_SESSION_PASS=password
+STORAGE_URL=/uploads
